After fixing alignment issue in add photoshoot person detail page in admin part.

--- a/assets/admin/css/simpleFilePreview.css
+++ b/assets/admin/css/simpleFilePreview.css
@@ -34,7 +34,7 @@
   display: block;
   width: 120px;
   height: 120px;
-  margin-left: 10px;
+  margin-left: 30px !important;
   border: 4px solid #fff;
   border-radius:3px;
   background-color: #f7f7f7;
