--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7030,3 +7030,20 @@ fieldset[disabled] .btn-primary.active {
 .orderStep > li.disabled > a:focus {
   color: #999999;
 }
+.add_to_cart_status{
+	color: #c81d6a;
+	/*margin-bottom: 20px;*/
+	font-size:16px;
+	font-weight: 500;
+	text-transform: uppercase;
+	/*border: 1px solid #c81d6a;*/
+	padding: 5px;
+}
+.updations_status{
+	color: #c81d6a;
+	/*margin-bottom: 20px;*/
+	font-size:16px;
+	font-weight: 500;
+	text-transform: uppercase;
+	padding: 5px;
+}
